--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 choreographer==1.1.1
 click==8.3.0
+et_xmlfile==2.0.0
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
@@ -18,6 +19,7 @@ logistro==1.1.0
 MarkupSafe==3.0.2
 narwhals==2.5.0
 numpy==2.3.3
+openpyxl==3.1.5
 orjson==3.11.3
 packaging==25.0
 pandas==2.3.2
